# electronic-piggy-bank

./: .env.example  .gitignore  README.md  pyproject.toml
buzzerOled_test/: buzzerOled_test.ino
esp32/: esp32.ino  happy.h
firmware/electronic_piggy_bank/: actuators.ino  camera_server.ino  display.ino  electronic_piggy_bank.ino  hardware_config.h  sensors_and_time.ino
servo_motor/: servo_motor.ino
web/: face_detect.xml  script.js  前端.html  後端.py
web/backend/: __init__.py  app.py  config.py  database.py  face_service.py  hardware.py
web/frontend/: app.js  index.html  styles.css
